@@ -1,6 +1,7 @@
 Epplet_gadget btn_conf, btn_close, btn_help, btn_www, btn_ftp, btn_wget;
-Epplet_gadget lbl_url, btn_file_url, btn_urllist;
+Epplet_gadget lbl_url, btn_file_url, btn_urllist, btn_conf;
 Epplet_gadget p, url_p;
+
 
 char *urllist[10]={NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL};
 int num_urls = 0;
@@ -27,3 +28,11 @@ struct
   char *get_command;
 }
 opt;
+
+Window confwin = 0;
+Epplet_gadget txt_new_url_command;
+Epplet_gadget txt_url_save_file;
+Epplet_gadget txt_url_file;
+Epplet_gadget txt_www_command;
+Epplet_gadget txt_ftp_command;
+Epplet_gadget txt_get_command;
